# React-Fastapi

client/: index.html  package-lock.json  package.json
client/src/: App.jsx  main.jsx
client/src/New folder/components/: EditProfile.jsx  Login.jsx  MainContent.jsx  Register.jsx  SideNavContact.jsx  SideNavProfile.jsx
client/src/New folder/context/: data.js
client/src/components/: EditProfile.jsx  Header.jsx  Index.jsx  Logout.jsx  MainContent.jsx  Nav.jsx  Profile.jsx  Register.jsx  SideNavContact.jsx  SideNavProfile.jsx
client/src/components/friends/: FriendRequest.jsx  Friends.jsx  FriendsNav.jsx  Suggestions.jsx  UserProfile.jsx
client/src/context/: ProtectedRoute.jsx  UserProvider.jsx  getUserData.jsx
server/: alembic.ini  database.py  funtions.py  main.py  model.py  pyproject.toml  requirements.txt  schema.py  test.db
server/alembic/: env.py
server/alembic/versions/: 091af6f39936_create_users_table.py  85381dce0620_inital_migrate.py
